[package]
name = "net-sniff"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
etherparse = "0.19.0"
pcap = "2.4.0"
ratatui = "0.30.0"
serde = "1.0.228"
tokio = "1.49.0"
# Move these here so they work on Mac too!
sysinfo = "0.30"
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"
